# Vultrigger

./: .gitignore  README.md  formatted_case_results.json  pyproject.toml  requirements.txt
config/: dashscope.env.example  dataset_manifest.example.yaml  dataset_manifest.yaml  llm_config.example.json  llm_config.qwen.example.json  qwen.env.example
scripts/: build_call_graph.py  build_method_flow_graph.py  build_parameter_flow_graph.py  check_codeql_env.py  download_dataset.py  print_dataset_summary.py  run_codeql_pipeline.py  run_full_dataset_experiment.py  run_parameter_codeql_queries.py  run_python_pipeline.py  run_python_third_phase.py  run_third_phase.py  select_test_paths.py  test_dashscope_once.py  validate_dataset.py
src/cal_graph_builder/: __init__.py  call_graph_builder.py  from_codeql_csv.py  method_flow_graph.py
src/data_handler/: __init__.py  dataset_downloader.py  dataset_handler.py
src/pipeline/: run_downstream_codeql.py  run_third_phase.py
src/poc_hander/: PoCHandler.py
src/pov_generator/: PoVGenerator.py
src/python_analysis/: __init__.py  ast_pipeline.py
src/reachability/: __init__.py  models.py  parameter_graph_builder.py  path_ranker.py  reachability_analyzer.py
src/symbol_indexer/: symbol_indexer.py
src/third_phase/: README.md  __init__.py  api_facts_extractor.py  context_ranker.py  context_retriever.py  executor.py  io.py  llm_client.py  models.py  orchestrator.py  prompt_knowledge.py  task_adapter.py  test_plan_builder.py  toolchain_env.py
src/tools/: cmd.py  codeql_runner.py  llm_config.py
tools/: setenv.cmd  setenv.ps1
(+14 files in other folders)
